{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 23,
  "lineage": "9f3988c0-6e2e-3d61-21be-f4e429dd196a",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "security_group1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-05-30T09:21:24.670-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sacred-attic-388300/global/firewalls/security-group1",
            "log_config": [],
            "name": "security-group1",
            "network": "https://www.googleapis.com/compute/v1/projects/sacred-attic-388300/global/networks/my-vpc",
            "priority": 1000,
            "project": "sacred-attic-388300",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sacred-attic-388300/global/firewalls/security-group1",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "security_group2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-05-30T09:21:24.649-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sacred-attic-388300/global/firewalls/security-group2",
            "log_config": [],
            "name": "security-group2",
            "network": "https://www.googleapis.com/compute/v1/projects/sacred-attic-388300/global/networks/my-vpc",
            "priority": 1000,
            "project": "sacred-attic-388300",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sacred-attic-388300/global/firewalls/security-group2",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "security_group3",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-05-30T09:21:24.289-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sacred-attic-388300/global/firewalls/security-group3",
            "log_config": [],
            "name": "security-group3",
            "network": "https://www.googleapis.com/compute/v1/projects/sacred-attic-388300/global/networks/my-vpc",
            "priority": 1000,
            "project": "sacred-attic-388300",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sacred-attic-388300/global/firewalls/security-group3",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "my_gateway_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.36.53.144",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-05-30T09:21:12.451-07:00",
            "id": "projects/sacred-attic-388300/global/addresses/my-gateway-ip",
            "name": "my-gateway-ip",
            "prefix_length": 0,
            "project": "sacred-attic-388300",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sacred-attic-388300/global/addresses/my-gateway-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "db_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20230523",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/sacred-attic-388300/zones/us-central1-c/disks/db-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/sacred-attic-388300/zones/us-central1-c/instances/db-server",
            "instance_id": "8534266763802287230",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-2",
            "metadata_fingerprint": "0Uc5MsYH9jA=",
            "name": "db-server",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/sacred-attic-388300/global/networks/my-vpc",
                "network_ip": "10.0.3.2",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/sacred-attic-388300/regions/us-central1/subnetworks/subnet3",
                "subnetwork_project": "sacred-attic-388300"
              }
            ],
            "project": "sacred-attic-388300",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/sacred-attic-388300/zones/us-central1-c/instances/db-server",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_network.my_vpc",
            "google_compute_subnetwork.subnet3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "web_server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20230523",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/sacred-attic-388300/zones/us-central1-a/disks/web-server1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/sacred-attic-388300/zones/us-central1-a/instances/web-server1",
            "instance_id": "9119952358533209214",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "0Uc5MsYH9jA=",
            "name": "web-server1",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/sacred-attic-388300/global/networks/my-vpc",
                "network_ip": "10.0.1.2",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/sacred-attic-388300/regions/us-central1/subnetworks/subnet1",
                "subnetwork_project": "sacred-attic-388300"
              }
            ],
            "project": "sacred-attic-388300",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/sacred-attic-388300/zones/us-central1-a/instances/web-server1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.my_vpc",
            "google_compute_subnetwork.subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/sacred-attic-388300/global/networks/my-vpc",
            "mtu": 0,
            "name": "my-vpc",
            "project": "sacred-attic-388300",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sacred-attic-388300/global/networks/my-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-05-30T09:21:24.504-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/sacred-attic-388300/regions/us-central1/subnetworks/subnet1",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "subnet1",
            "network": "https://www.googleapis.com/compute/v1/projects/sacred-attic-388300/global/networks/my-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "sacred-attic-388300",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sacred-attic-388300/regions/us-central1/subnetworks/subnet1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-05-30T09:21:24.399-07:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/sacred-attic-388300/regions/us-central1/subnetworks/subnet2",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "subnet2",
            "network": "https://www.googleapis.com/compute/v1/projects/sacred-attic-388300/global/networks/my-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "sacred-attic-388300",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sacred-attic-388300/regions/us-central1/subnetworks/subnet2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-05-30T09:21:24.585-07:00",
            "gateway_address": "10.0.3.1",
            "id": "projects/sacred-attic-388300/regions/us-central1/subnetworks/subnet3",
            "ip_cidr_range": "10.0.3.0/24",
            "name": "subnet3",
            "network": "https://www.googleapis.com/compute/v1/projects/sacred-attic-388300/global/networks/my-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "sacred-attic-388300",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sacred-attic-388300/regions/us-central1/subnetworks/subnet3",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.my_vpc"
          ]
        }
      ]
    }
  ]
}